2011-07-01  Ryosuke Niwa  <rniwa@webkit.org>

        [GTK] editing/selection/directionality-after-undo-replace.html is failing
        https://bugs.webkit.org/show_bug.cgi?id=63853

        Reviewed by Ojan Vafai.

        Don't do leapForward between mouseDown and mouseUp so that GTK recognizes the double-click.

        * editing/selection/directionality-after-undo-replace.html:

2011-07-01  Kent Tamura  <tkent@chromium.org>

        Reviewed by Tony Chang.

        Use common functions in fast/forms/search-rtl.html
        https://bugs.webkit.org/show_bug.cgi?id=63787

        * fast/forms/search-rtl.html: Use searchCancelButtonPosition() to make
          this work on Chromium Windows and Chromium Linux.
        * platform/chromium/test_expectations.txt:

2011-07-01  Sam Weinig  <sam@webkit.org>

        Reduce parser nesting cap to 512
        https://bugs.webkit.org/show_bug.cgi?id=63856

        Update test for new cap.

        * fast/parser/block-nesting-cap-expected.txt:
        * fast/parser/script-tests/block-nesting-cap.js:

2011-07-01  Mihai Parparita  <mihaip@chromium.org>

        editing/selection/directionality-after-undo-replace.html fails on Chromium Windows
        https://bugs.webkit.org/show_bug.cgi?id=63855

        Reviewed by Ryosuke Niwa.
        
        Allow a trailing whitespace in the expected result, since Windows
        has different word iterating behavior.

        * editing/selection/directionality-after-undo-replace.html:

2011-07-01  Mihai Parparita  <mihaip@chromium.org>

        Remove Chromium Windows 7 and Vista media test expectations, since
        clobbering the bots appears to have fixed the timeouts and failures.

        * platform/chromium/test_expectations.txt:

2011-07-01  Ryosuke Niwa  <rniwa@webkit.org>

        GTK rebaseline r90275. The failure of directionality-after-undo-replace.html is tracked by the bug 63853.

        * platform/gtk/editing/selection/after-line-break-expected.txt: Added.